Sass file for framework-specific definitions

--- a/app/style.scss
+++ b/app/style.scss
@@ -17,3 +17,5 @@ Offset uses inspiration and code from Automattic's Underscores theme located at 
 */
 
 @import "../bower_components/pure/pure.css";
+
+@import "sass/base/offset";
