--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ Author: Paul E. Graham
 Author URI: http://bytefair.com/
 Description: Offset is intended to make theme development faster by preconfiguring all the hot new front-end tools that developers know and love!
 Version: 0.0.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License: The MIT License (MIT)
+License URI: http://opensource.org/licenses/MIT
 Text Domain: offset
 Domain Path: /languages/
 Tags: boilerplate, framework, starter
