would like to have marginalia available by default

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -7,7 +7,7 @@ $use-options:       false;
 $use-pagination:    true;
 $use-breadcrumb:    false;
 $use-media:         false;
-$use-marginalia:    false;
+$use-marginalia:    true;
 $use-island:        false;
 $use-block-list:    false;
 $use-matrix:        false;
