important-ize comments just so we know what section we're in

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -1,2 +1,10 @@
+/*!
+ * includes and setup
+ */
 @import "variables";
 @import "../../bower_components/inuitcss/inuit";
+
+/*!
+ * starter code
+ */
+@import "base/grid";
