turns on debug-mode and responsive support for wide screens

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -26,5 +26,7 @@ $use-greybox:       false;
 
 
 //* inuit.css variable overrides
+$responsive-extra:  true;
+$debug-mode:        true;
 
 //* custom variables
