--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -26,7 +26,7 @@ $use-greybox:       false;
 
 
 //* inuit.css variable overrides
-$responsive-extra:  true;
-$debug-mode:        true;
+//$responsive-extra:  true;
+//$debug-mode:        true;
 
 //* custom variables
