some form-specific code

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -8,6 +8,9 @@
  * starter code
  */
 @import "base/grid";
+@import "base/forms";
 
 @import "components/site-menu";
+@import "components/search-form";
+
 @import "wp-required";
