very basic media handling

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -9,6 +9,7 @@
  */
 @import "base/grid";
 @import "base/forms";
+@import "base/media";
 
 @import "components/site-menu";
 @import "components/search-form";
