--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,32 +1,3 @@
-//* inuit.css components to use
-$use-grids:         true;
-$use-flexbox:       false;
-$use-columns:       true;
-$use-nav:           true;
-$use-options:       false;
-$use-pagination:    true;
-$use-breadcrumb:    false;
-$use-media:         false;
-$use-marginalia:    true;
-$use-island:        false;
-$use-block-list:    false;
-$use-matrix:        false;
-$use-split:         false;
-$use-this-or-this:  false;
-$use-link-complex:  false;
-$use-flyout:        false;
-$use-arrows:        false;
-$use-sprite:        false;
-$use-icon-text:     true;
-$use-beautons:      true;
-$use-lozenges:      true;
-$use-rules:         true;
-$use-stats:         false;
-$use-greybox:       false;
-
-
-//* inuit.css variable overrides
-//$responsive-extra:  true;
-//$debug-mode:        true;
+//* Bootstrap variable overrides
 
 //* custom variables
