--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -2,17 +2,9 @@
  * includes and setup
  */
 @import "variables";
-@import "../../bower_components/inuitcss/inuit";
+@import "bootstrap";
 
 /*!
  * starter code
  */
-@import "base/grid";
-@import "base/forms";
-@import "base/media";
-
-@import "components/site-menu";
-@import "components/search-form";
-@import "components/pagination";
-
 @import "wp-required";
