changing more things over to Bootstrap, all remaining code should be gone from Inuit

--- a/assets/stylesheets/base/_grid.scss
+++ b/assets/stylesheets/base/_grid.scss
@@ -1,40 +1,5 @@
-.header__wrapper,
-.footer__wrapper,
-.main__wrapper {
-	@extend .grid;
-}
-
 .site__header,
 .site__footer,
-.content-pane,
-.sidebar {
-	@extend .grid__item;
-}
-
-.header__wrapper,
-.footer__wrapper,
-.main__wrapper {
-	max-width: 1140px;
-	margin: 0 auto;
-	display: block;
-}
-
-.site__header,
-.site__footer,
-{
-	@extend .one-whole;
-}
-
-.page {
-	.content-pane {
-		@extend .one-whole;
-	}
-}
-
 .content-pane {
-	@extend .desk-two-thirds;
-}
-
-.sidebar {
-	@extend .desk-one-third;
+	@extend .container-fluid;
 }
