--- a/assets/stylesheets/master.scss
+++ b/assets/stylesheets/master.scss
@@ -9,6 +9,8 @@
  */
 @import "base/grid";
 @import "base/media";
+@import "base/tables";
+@import "base/forms";
 
 @import "components/pagination";
 @import "components/site-menu";
