--- a/assets/stylesheets/master.scss
+++ b/assets/stylesheets/master.scss
@@ -11,8 +11,10 @@
 @import "base/media";
 @import "base/tables";
 @import "base/forms";
+@import "base/tweaks";
 
 @import "components/pagination";
 @import "components/site-menu";
+@import "components/search-form";
 
 @import "wp-required";
