a few style adjustments

--- a/assets/stylesheets/base/_media.scss
+++ b/assets/stylesheets/base/_media.scss
@@ -7,15 +7,24 @@
 	height: auto;
 }
 
-.thumbnail.wp-caption {
-	&.alignleft,
-	&.alignright {
-		display: inline-block;
-	}
-}
-
 .wp-caption-text {
 	text-align: center;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+.wp-caption {
+	@extend .thumbnail;
+	@extend .clearfix;
+	max-width: 100%;
+	height: auto;
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 iframe {
