--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -19,3 +19,9 @@ h1, h2, h3, h4, h5, h6, p {
 	}
 	line-height: 1;
 }
+
+// the images should be restricted to their container and responsive unless otherwise specified
+img {
+	max-width: 100%;
+	height: auto;
+}
