--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,5 +1,15 @@
-// clearfix extend
+/**
+ * Clearfix extend
+ */
 %cf {
 	@include clearfix();
 }
 
+/**
+ * Breakpoint media mixin
+ */
+@mixin breakpoint($point) {
+	@if $point == tablet {
+		@media (min-width: 800px) { @content; }
+	}
+}
