--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,5 +1,5 @@
 // the increasingly tiny Normalize
-@import "../../vendor/normalize.css/normalize.css";
+@import "../vendor/normalize.css/normalize.css";
 
 // of course
 *, *:before, *:after {
