--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,6 +1,7 @@
 // Master styles file, declare your styles in subfiles
 @import "bourbon";
 
+@import "base/vars";
 @import "base/mixins";
 @import "base/reset";
 @import "base/wysiwyg";
