--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,15 +1,15 @@
 /**
- * Clearfix extend
- */
-%cf {
-	@include clearfix();
-}
-
-/**
  * Breakpoint media mixin
  */
 @mixin breakpoint($point) {
 	@if $point == tablet {
 		@media (min-width: 800px) { @content; }
 	}
+}
+
+/**
+ * z-index mixin to simplify confusing layer model
+ */
+@mixin z-index($index, $fine: 0) {
+	z-index: ($index * 100) + $fine;
 }
