change coolfire references

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
-Theme Name: Coolfire Offset
-Theme URI: https://bitbucket.org/coolfirestudios/coolfire-offset
+Theme Name: Offset
+Theme URI: https://github.com/bytefair/offset
 Author: Paul E. Graham
 Author URI: http://bytefair.com/
 Description: Offset is intended to make theme development faster by preconfiguring all the hot new front-end tools that developers know and love!
-Version: 0.7.0
+Version: 0.8.0
 License: The MIT License (MIT)
 License URI: http://opensource.org/licenses/MIT
 Text Domain: offset
