--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -26,7 +26,7 @@ $major-twelfth:  3;
 $double-octave:  4;
 
 // and set it
-$base-font-size: em(16);
+$base-font-size: 1em;
 $font-scale: $minor-third;
 
 $epsilon: $base-font-size;
